--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
   },
-  "homepage": "https://github.com/Chzfly/projectTpp"
+  "homepage": "https://chzfly.github.io/projectTpp/"
 }
