--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "gh-pages": "^2.0.1",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.5",
     "react": "^16.6.3",
@@ -20,9 +19,9 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
-		"build": "npm-run-all build-css build-js",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -b master -d build"
+    "build": "npm-run-all build-css build-js",
+    "predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +34,7 @@
   ],
   "devDependencies": {
     "eslint-config-defaults": "^9.0.0",
+    "gh-pages": "^2.0.1",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "webpack-cli": "^3.1.2",
