--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
-    "predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+    "build": "npm-run-all build-css build-js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +37,5 @@
     "redux": "^4.0.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
-  },
-  "homepage": "https://chzfly.github.io/projectTpp/"
+  }
 }
