--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.jsx linguist-language=React
-*.css linguist-language=React
-*.html linguist-language=React
-*.scss linguist-language=React
+# *.jsx linguist-language=React
+# *.css linguist-language=React
+# *.html linguist-language=React
+# *.scss linguist-language=React
